# nethack-babel

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DIFFERENCES.md  GAP_STATUS.md  LICENSE  Makefile  NetHack_Rust_vs_C_Diff_2026-03-16.md  README.md  README_zh.md  REMASTER_COVERAGE_AUDIT_2026-03-16.md  deny.toml  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  nightly-differential.yml  release.yml
.spec-workflow/archive/: PHASE3_PLAN.md  SESSION_CHECKPOINT_3A.md  SESSION_CHECKPOINT_3B.md  SESSION_CHECKPOINT_3C.md  SESSION_CHECKPOINT_FINAL.md  SESSION_CHECKPOINT_PHASE4.md  SESSION_FINAL.md
.spec-workflow/user-templates/: translation-workflow.md
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  game_start.rs  main.rs  recording.rs  save.rs  server.rs
crates/data/: Cargo.toml
crates/data/src/: components.rs  const_tables.rs  level_loader.rs  level_schema.rs  lib.rs  loader.rs  schema.rs
crates/engine/: Cargo.toml
crates/engine/src/: action.rs  apply.rs  artifacts.rs  attributes.rs  ball.rs  bones.rs  combat.rs  conduct.rs  dbridge.rs  detect.rs  dig.rs  dip.rs  do_actions.rs  dungeon.rs  end.rs  engrave.rs  environment.rs  equipment.rs  event.rs  exper.rs  explode.rs  fountain.rs  fov.rs  hunger.rs  identification.rs  inventory.rs  items.rs  lib.rs  light.rs  lock.rs  makemon.rs  map_gen.rs  mcastu.rs  mhitm.rs  mhitu.rs  minion.rs  mkobj.rs  mondata.rs  monmove.rs  monster_ai.rs  (+40 more)
crates/engine/tests/: differential.rs  monte_carlo.rs  property_tests.rs  touchstone.rs
crates/engine/tests/common/: mod.rs
crates/engine/tests/fixtures/: c_recording_movement.jsonl  known_divergences.toml
crates/i18n/: Cargo.toml
crates/i18n/src/: classifier.rs  composer.rs  item_names.rs  lib.rs  locale.rs  noun_phrase.rs
crates/i18n/src/snapshots/: nethack_babel_i18n__item_names__tests__amulets.snap  nethack_babel_i18n__item_names__tests__armor.snap  nethack_babel_i18n__item_names__tests__coins.snap  nethack_babel_i18n__item_names__tests__food.snap  nethack_babel_i18n__item_names__tests__gems.snap  nethack_babel_i18n__item_names__tests__potions.snap  nethack_babel_i18n__item_names__tests__rings.snap  nethack_babel_i18n__item_names__tests__scrolls.snap  nethack_babel_i18n__item_names__tests__spellbooks.snap  nethack_babel_i18n__item_names__tests__tools.snap  nethack_babel_i18n__item_names__tests__wands.snap  nethack_babel_i18n__item_names__tests__weapons.snap
crates/i18n/tests/: comprehensive_i18n.rs  touchstone_i18n.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  colors.rs  input.rs  lib.rs  (+4 more)
data/content/: encyclopedia.txt
data/dungeons/: dungeon_topology.toml
data/help/: cmdhelp.txt  help.txt  history.txt  opthelp.txt
data/items/: amulets.toml  armor.toml  food.toml  gems.toml  potions.toml  rings.toml  scrolls.toml  spellbooks.toml  tools.toml  wands.toml  weapons.toml
data/monsters/: base.toml
data/quests/: archeologist.toml  barbarian.toml  caveman.toml  healer.toml  knight.toml  monk.toml  priest.toml  ranger.toml  rogue.toml  samurai.toml  tourist.toml  valkyrie.toml  wizard.toml
doc/: GUIDEBOOK.md  GUIDEBOOK_zh.md
docs/: ARCHITECTURE.md  Content-Contributor-Guide.md  Guidebook.md
scripts/: diff_test.sh  fuzz_c_recordings.sh  generate_c_recording.sh
specs/: REVIEW-PLAN.md  armor-class.md  artifact.md  dungeon-gen.md  experience.md  hunger.md  identification.md  inventory.md  item-generation.md  item-naming.md  item-use.md  melee-combat.md  monster-ai.md  monster-attack.md  monster-core.md  monster-generation.md  monster-items.md  movement.md  pet.md  pickup.md  potion-effects.md  ranged-combat.md  religion.md  scroll-effects.md  shop.md  spellcasting.md  status-timeout.md  trap.md  wand-ray.md
specs/reviews/: SUMMARY.md  armor-class-review.md  artifact-review.md  dungeon-gen-review.md  experience-review.md  hunger-review.md  identification-review.md  inventory-review.md  item-generation-review.md  item-naming-review.md  item-use-review.md  melee-combat-review.md  monster-ai-review.md  monster-attack-review.md  monster-core-review.md  monster-generation-review.md  monster-items-review.md  movement-review.md  pet-review.md  pickup-review.md  potion-effects-review.md  ranged-combat-review.md  religion-review.md  scroll-effects-review.md  shop-review.md  spellcasting-review.md  status-timeout-review.md  trap-review.md  wand-ray-review.md
tests/: TEST_ORACLES.md
(+45 files in other folders)
