[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/data",
    "crates/i18n",
    "crates/tui",
    "crates/audio",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "NGPL"
repository = "https://github.com/user/nethack-babel"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
unicode-width = "0.2"
