[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/data",
    "crates/i18n",
    "crates/tui",
    "crates/audio",
    "crates/cli",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "NGPL"
repository = "https://github.com/SatoshiNakamoto0126/nethack-babel"
homepage = "https://github.com/SatoshiNakamoto0126/nethack-babel"
description = "A modern Rust reimplementation of NetHack 3.7 with built-in multilingual support"
keywords = ["nethack", "roguelike", "game", "terminal", "dungeon"]
categories = ["games", "command-line-utilities"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
