[package]
name = "nethack-babel"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
bincode = "2"
tracing = { workspace = true }
tracing-subscriber = "0.3"
nethack-babel-engine = { path = "../engine" }
nethack-babel-data = { path = "../data" }
nethack-babel-i18n = { path = "../i18n" }
nethack-babel-tui = { path = "../tui" }
nethack-babel-audio = { path = "../audio", optional = true }
steamworks = { version = "0.11", optional = true }
serde = { workspace = true }
toml = { workspace = true }

[features]
default = ["audio"]
steam = ["steamworks"]
audio = ["nethack-babel-audio"]
