[package]
name = "nethack-babel-i18n"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
unicode-width = { workspace = true }
fluent = "0.16"
fluent-syntax = "0.11"
unic-langid = "0.9"
hecs = "0.10"
nethack-babel-engine = { path = "../engine" }
nethack-babel-data = { path = "../data" }

[dev-dependencies]
insta = "1"
